--- a/css/type.css
+++ b/css/type.css
@@ -1,5 +1,5 @@
 html {
-  font: normal 100%/1.5 Georgia,serif;
+  font: normal 100%/1.5 Abril_Fatface,serif;
 }
 
 @media only screen and (min-width: 60em) {
